# inspection-master

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  schema.sql  supabase_schema.sql
.github/workflows/: ci.yml  run-agent.yml
agent/: auth_setup.py  business_rules.py  claude_client.py  db.py  gmail_client.py  main.py  normalizers.py  notifications.py  notify_failure.py  sheets_sync.py  supabase_sync.py
agent/parsers/: alpine_lot.py  altar_lot.py  fresh_way.py  greenfruit.py  inspection_report.py  ocean.py  prime_time_pl.py  sq1.py  sunkist_status.py  sunkist_vessel.py
config/: clients.yaml  fumigation_rules.yaml
migrations/: 001_add_location_reinspection.sql  002_add_staff.sql  003_add_notifications.sql  004_add_clients.sql
tests/: test_auto_window.py  test_business_rules.py  test_db.py  test_new_parsers.py  test_normalizers.py  test_notifications.py  test_ocean_parser.py  test_smoke.py  test_sunkist_status.py  test_sunkist_vessel.py
tests/fixtures/: ocean_report_sample.html
web/: next-shims.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/agenda/: page.tsx
web/app/clients/: page.tsx
web/app/inspectores/: page.tsx
web/app/staff/: page.tsx
web/components/: agenda-diaria.tsx  clients-table.tsx  dashboard.tsx  inspectors-table.tsx  sidebar.tsx  staff-table.tsx
web/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  filter-chip.tsx  grade-pill.tsx  icon-button.tsx  icon.tsx  (+11 more)
web/lib/: staff-actions.ts  supabase.ts  tokens.ts  types.ts
